<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wel3"
    android:orientation="vertical"
    tools:context=".welcome">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/presidencylogo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/c1"
        android:layout_width="290dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contextClickable="true"
        android:rotationY="0"
        android:textAlignment="center"
        app:cardBackgroundColor="#152d4b"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:src="@drawable/adminmenu" />

        <TextView
            android:id="@+id/viewmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:text="@string/admin"
            android:textColor="#ffffff"
            android:textSize="38sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/c2"
        android:layout_width="290dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#152d4b"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:text="@string/faculty"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:src="@drawable/facultymenu" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/c3"
        android:layout_width="290dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#152d4b"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:fontFamily="cursive"
            android:text="@string/student"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"

            android:src="@drawable/studentmenu" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/c4"
        android:layout_width="146dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"

        app:cardBackgroundColor="#152d4b"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:text="@string/exit"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</LinearLayout>