<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/c"

        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="265dp"
            android:layout_marginBottom="60dp"
            app:srcCompat="@drawable/presidencylogo" />

        <EditText
            android:id="@+id/editText25"
            style="@android:style/Widget.EditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:textColor="#152d4b"
            android:textColorHint="#152d4b" />

        <EditText
            android:id="@+id/editText27"
            style="@android:style/Widget.EditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="#152d4b"
            android:textColorHint="#152d4b" />

        <Button
            android:id="@+id/button25"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#152d4b"
            android:text="@string/btn_login" />


        <TextView
            android:id="@+id/button26"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:text="Forgot Password?"
            android:textColor="#152d4b" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <!-- Login Button -->

        <!-- Link to Login Screen -->

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</RelativeLayout>
